tests/rosetta/out/C/bernoulli-numbers.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:38Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:38Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int bernoulli(int n) {
  list_int a = list_int_create(0);
  __auto_type m = 0;
  while (m <= n) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = (int)(1) / ((int)((m + 1)));
    list_int tmp2 = concat_list_int(a, tmp1);
    a = tmp2;
    __auto_type j = m;
    while (j >= 1) {
      a.data[j - 1] = ((int)(j)) * (a.data[j - 1] - a.data[j]);
      j = j - 1;
    }
    m = m + 1;
  }
  return a.data[0];
}

int _mochi_main() {
  for (int i = 0; i < 61; i++) {
    __auto_type b = bernoulli(i);
    if (num(b) != 0) {
      char *tmp3 = _str(num(b));
      __auto_type numStr = tmp3;
      char *tmp4 = _str(denom(b));
      __auto_type denStr = tmp4;
      char *tmp5 = _str(i);
      char *tmp6 = concat_string("B(", tmp5(2, " "));
      char *tmp7 = concat_string(tmp6, ") =");
      char *tmp8 = concat_string(tmp7, numStr.pad_start(45, " "));
      char *tmp9 = concat_string(tmp8, "/");
      char *tmp10 = concat_string(tmp9, denStr);
      char *tmp11 = _str(i);
      char *tmp12 = concat_string("B(", tmp11(2, " "));
      char *tmp13 = concat_string(tmp12, ") =");
      char *tmp14 = concat_string(tmp13, numStr.pad_start(45, " "));
      char *tmp15 = concat_string(tmp14, "/");
      char *tmp16 = concat_string(tmp15, denStr);
      printf("%d\n", tmp16);
    }
  }
  return 0;
}
int main() { return _mochi_main(); }
